--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t yishensun/docker-react -f Dockerfile.dev .
 
 script:
-  -
+  - docker run -e CI=true yishensun/docker-react npm run test
